--- a/blackberry10/package.json
+++ b/blackberry10/package.json
@@ -20,6 +20,7 @@
     "xml2js": "0.1.13",
     "validator": "0.4.1",
     "wrench": "1.3.9",
+    "shelljs":"0.1.2",
     "plugman": "git+https://github.com/blackberry/cordova-plugman.git#blackberry10"
   },
   "files": [
