--- a/blackberry10/bin/templates/project/plugins/Battery/plugin.xml
+++ b/blackberry10/bin/templates/project/plugins/Battery/plugin.xml
@@ -16,12 +16,13 @@
 -->
 
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-    id="org.apache.cordova.core"
+    id="org.apache.cordova.core.Battery"
     version="0.0.1">
 
     <name>Battery</name>
 
     <platform name="blackberry10">
+        <source-file src="src/blackberry10/index.js" target-dir="Battery" />
         <config-file target="www/config.xml" parent="/widget">
             <feature name="Battery" value="Battery"/>
         </config-file>
