--- a/blackberry10/bin/templates/project/plugins/NetworkStatus/plugin.xml
+++ b/blackberry10/bin/templates/project/plugins/NetworkStatus/plugin.xml
@@ -16,12 +16,13 @@
 -->
 
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-    id="org.apache.cordova.core"
+    id="org.apache.cordova.core.Network"
     version="0.0.1">
 
-    <name>NetworkStatus</name>
+    <name>Network Information</name>
 
     <platform name="blackberry10">
+        <source-file src="src/blackberry10/index.js" target-dir="Network" />
         <config-file target="www/config.xml" parent="/widget">
             <feature name="NetworkStatus" value="NetworkStatus"/>
         </config-file>
