--- a/blackberry10/bin/templates/project/plugins/com.blackberry.utils/plugin.xml
+++ b/blackberry10/bin/templates/project/plugins/com.blackberry.utils/plugin.xml
@@ -19,4 +19,11 @@
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     id="com.blackberry.utils"
     version="1.0.0">
+
+    <platform name="blackberry10">
+        <lib-file src="src/blackberry10/native/device/libutils.so" />
+        <config-file target="www/config.xml" parent="/widget">
+            <feature name="com.blackberry.utils"/>
+        </config-file>
+    </platform>
 </plugin>
