--- a/blackberry10/package.json
+++ b/blackberry10/package.json
@@ -21,7 +21,7 @@
     "validator": "0.4.1",
     "wrench": "1.3.9",
     "shelljs":"0.1.2",
-    "plugman": "git+https://github.com/blackberry/cordova-plugman.git#blackberry10"
+    "plugman": "git+https://github.com/blackberry/cordova-plugman.git#blackberry10Rebase"
   },
   "files": [
     "node_modules",
