--- a/blackberry10/bin/templates/project/plugins/com.blackberry.utils/plugin.xml
+++ b/blackberry10/bin/templates/project/plugins/com.blackberry.utils/plugin.xml
@@ -21,7 +21,8 @@
     version="1.0.0">
 
     <platform name="blackberry10">
-        <lib-file src="src/blackberry10/native/device/libutils.so" />
+        <lib-file src="src/blackberry10/native/device/libutils.so" arch="device"/>
+        <lib-file src="src/blackberry10/native/simulator/libutils.so" arch="simulator"/>
         <config-file target="www/config.xml" parent="/widget">
             <feature name="com.blackberry.utils"/>
         </config-file>
